--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-persist": "^1.0.2",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.10.0",
+		"redux-persist": "^6.0.0",
 		"styled-components": "^5.3.9"
 	},
 	"devDependencies": {
