--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.5",
+		"@types/react-redux": "^7.1.25",
 		"dotenv": "^16.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
