--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.10.0",
 		"redux-persist": "^6.0.0",
-		"styled-components": "^5.3.9"
+		"styled-components": "^5.3.9",
+		"styled-normalize": "^8.0.7"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
