--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.1.1",
 		"@reduxjs/toolkit": "^1.9.5",
 		"@types/react-redux": "^7.1.25",
 		"dotenv": "^16.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.45.1",
 		"react-persist": "^1.0.2",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.10.0",
 		"redux-persist": "^6.0.0",
 		"styled-components": "^5.3.9",
-		"styled-normalize": "^8.0.7"
+		"styled-normalize": "^8.0.7",
+		"yup": "^1.2.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
