--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"redux-persist": "^6.0.0",
 		"styled-components": "^5.3.9",
 		"styled-normalize": "^8.0.7",
+		"vite-plugin-svgr": "^3.2.0",
 		"yup": "^1.2.0"
 	},
 	"devDependencies": {
