--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"yup": "^1.2.0"
 	},
 	"devDependencies": {
+		"@trivago/prettier-plugin-sort-imports": "^4.1.1",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@types/styled-components": "^5.1.26",
